--- a/flask_auth_app/project/templates/base.html
+++ b/flask_auth_app/project/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beechat Hive</title>
-    <link rel="stylesheet" href="bulma.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/bulma.min.css') }}" />
 </head>
 
 <body>
