Add view current messages feature

--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -24,6 +24,15 @@
 
 <br>
 
+<label class="label">Messages: {{ messages }}</label>
+
+<br>
+
+<form method="POST" action="/getmessages">
+  <input type="submit" class="button is-success is-rounded" value="Check for messages">
+</form>
+
+<br>
 <!--T//  Testing message sending >-->
 
 
